Refaktoryzacja kodu.