@@ -28,17 +28,15 @@ import java.net.URLConnection;
 
 public class LogIn extends AsyncTask<String,Void,String> {
     private Context context;
-    private int byGetOrPost = 0;
 
     private String mail="";
-    public LogIn(Context context, int flag) {
+    public LogIn(Context context) {
         this.context = context;
-        byGetOrPost = flag;
     }
 
     protected void onPreExecute(){
-
     }
+
     public boolean isConnected(Context context) {
         ConnectivityManager cm = (ConnectivityManager) context
                 .getSystemService(Context.CONNECTIVITY_SERVICE);
@@ -64,76 +62,49 @@ public class LogIn extends AsyncTask<String,Void,String> {
 
         return false;
     }
+
     @Override
     protected String doInBackground(String... arg0) {
         if(isConnected(context)) {
             mail = (String) arg0[0];
-            if (byGetOrPost == 0) { //means by Get Method
-                try {
-                    String email = (String) arg0[0];
-                    String password = (String) arg0[1];
-                    String link = "http://rommam.cba.pl/registration.php?email=zibi@gmail.com&password=ania&user_name=zbychu";
-                    URL url = new URL(link);
-                    HttpClient client = new DefaultHttpClient();
-                    HttpGet request = new HttpGet();
-                    request.setURI(new URI(link));
-                    HttpResponse response = client.execute(request);
-                    BufferedReader in = new BufferedReader
-                            (new InputStreamReader(response.getEntity().getContent()));
+            try {
+                String email = (String) arg0[0];
+                String password = (String) arg0[1];
+                String link = "http://rommam.cba.pl/login.php";
+                String data = "email"
+                        + "=" + email;
+                data += "&" + "password"
+                        + "=" + password;
+                URL url = new URL(link);
+                URLConnection conn = url.openConnection();
+                conn.setDoOutput(true);
+                OutputStreamWriter wr = new OutputStreamWriter
+                        (conn.getOutputStream());
+                wr.write(data);
+                wr.flush();
 
-                    StringBuffer sb = new StringBuffer("");
-                    String line = "";
-                    while ((line = in.readLine()) != null) {
+                InputStreamReader isr = new InputStreamReader(conn.getInputStream());
+                BufferedReader reader = new BufferedReader(isr);
+
+                StringBuilder sb = new StringBuilder();
+                String line = null;
+                // Read Server Response
+                while ((line = reader.readLine()) != null) {
+                    if (line.contains("QUERY RESULT: ")) {
+                        line = line.substring(14, 15) + ";";
                         sb.append(line);
-
+                    } else if (line.contains("USERNAME: ")) {
+                        line = line.substring(10) + ";";
+                        sb.append(line);
                     }
-                    in.close();
-                    return sb.toString();
-                } catch (IOException e) {
-                    return new String("IOException: " + e.getMessage());
-                } catch (URISyntaxException e) {
-                    return new String("URIException: " + e.getMessage());
                 }
-            } else {
-                try {
-                    String email = (String) arg0[0];
-                    String password = (String) arg0[1];
-                    String link = "http://rommam.cba.pl/login.php";
-                    String data = "email"
-                            + "=" + email;
-                    data += "&" + "password"
-                            + "=" + password;
-                    URL url = new URL(link);
-                    URLConnection conn = url.openConnection();
-                    conn.setDoOutput(true);
-                    OutputStreamWriter wr = new OutputStreamWriter
-                            (conn.getOutputStream());
-                    wr.write(data);
-                    wr.flush();
-
-                    InputStreamReader isr = new InputStreamReader(conn.getInputStream());
-                    BufferedReader reader = new BufferedReader(isr);
-
-                    StringBuilder sb = new StringBuilder();
-                    String line = null;
-                    // Read Server Response
-                    while ((line = reader.readLine()) != null) {
-                        if (line.contains("QUERY RESULT: ")) {
-                            line = line.substring(14, 15) + ";";
-                            sb.append(line);
-                        } else if (line.contains("USERNAME: ")) {
-                            line = line.substring(10) + ";";
-                            sb.append(line);
-                        }
-                    }
-                    return sb.toString();
-                } catch (UnsupportedEncodingException e) {
-                    return new String("UEEException: " + e.getMessage());
-                } catch (MalformedURLException e) {
-                    return new String("MUException: " + e.getMessage());
-                } catch (IOException e) {
-                    return new String("IOException: " + e.getStackTrace().toString());
-                }
+                return sb.toString();
+            } catch (UnsupportedEncodingException e) {
+                return new String("UEEException: " + e.getMessage());
+            } catch (MalformedURLException e) {
+                return new String("MUException: " + e.getMessage());
+            } catch (IOException e) {
+                return new String("IOException: " + e.getStackTrace().toString());
             }
         }
         else{
